Add Columns UI 3.2.0 beta 5 and re-add 3.1.4

--- a/src/pages/columns-ui.astro
+++ b/src/pages/columns-ui.astro
@@ -95,16 +95,16 @@ const repo = "columns_ui"
   <h3>Latest pre-release version</h3>
   <DownloadList>
     <DownloadListItem
-      filename="foo_ui_columns-3.2.0-beta.4.x86-x64.fb2k-component"
-      label="Version 3.2.0 beta 4"
+      filename="foo_ui_columns-3.2.0-beta.5.x86-x64.fb2k-component"
+      label="Version 3.2.0 beta 5"
     />
   </DownloadList>
 
   <h3>Latest stable version</h3>
   <DownloadList>
     <DownloadListItem
-      filename="foo_ui_columns-3.1.5.x86-x64.fb2k-component"
-      label="Version 3.1.5"
+      filename="foo_ui_columns-3.1.4.x86-x64.fb2k-component"
+      label="Version 3.1.4"
     />
   </DownloadList>
 
@@ -119,6 +119,10 @@ const repo = "columns_ui"
     <DownloadListItem
       filename="foo_ui_columns-3.2.0-beta.1.x86-x64.fb2k-component"
       label="Version 3.2.0 beta 1"
+    />
+    <DownloadListItem
+      filename="foo_ui_columns-3.1.5.x86-x64.fb2k-component"
+      label="Version 3.1.5 (withdrawn)"
     />
     <DownloadListItem
       filename="foo_ui_columns-3.0.1.x86-x64.fb2k-component"
