--- a/src/pages/columns-ui.astro
+++ b/src/pages/columns-ui.astro
@@ -95,8 +95,8 @@ const repo = "columns_ui"
   <h3>Latest pre-release version</h3>
   <DownloadList>
     <DownloadListItem
-      filename="foo_ui_columns-3.2.0-beta.5.x86-x64.fb2k-component"
-      label="Version 3.2.0 beta 5"
+      filename="foo_ui_columns-3.2.0-rc.1.x86-x64.fb2k-component"
+      label="Version 3.2.0 release candidate 1"
     />
   </DownloadList>
 
@@ -117,8 +117,8 @@ const repo = "columns_ui"
   <h3>Previous versions</h3>
   <DownloadList>
     <DownloadListItem
-      filename="foo_ui_columns-3.2.0-beta.1.x86-x64.fb2k-component"
-      label="Version 3.2.0 beta 1"
+      filename="foo_ui_columns-3.2.0-beta.5.x86-x64.fb2k-component"
+      label="Version 3.2.0 beta 5"
     />
     <DownloadListItem
       filename="foo_ui_columns-3.1.5.x86-x64.fb2k-component"
