--- a/src/pages/columns-ui.astro
+++ b/src/pages/columns-ui.astro
@@ -92,19 +92,11 @@ const repo = "columns_ui"
 
   <h2>Downloads</h2>
 
-  <h3>Latest pre-release version</h3>
+  <h3>Latest version</h3>
   <DownloadList>
     <DownloadListItem
-      filename="foo_ui_columns-3.2.0-rc.1.x86-x64.fb2k-component"
-      label="Version 3.2.0 release candidate 1"
-    />
-  </DownloadList>
-
-  <h3>Latest stable version</h3>
-  <DownloadList>
-    <DownloadListItem
-      filename="foo_ui_columns-3.1.4.x86-x64.fb2k-component"
-      label="Version 3.1.4"
+      filename="foo_ui_columns-3.2.0.x86-x64.fb2k-component"
+      label="Version 3.2.0"
     />
   </DownloadList>
 
@@ -117,12 +109,12 @@ const repo = "columns_ui"
   <h3>Previous versions</h3>
   <DownloadList>
     <DownloadListItem
-      filename="foo_ui_columns-3.2.0-beta.5.x86-x64.fb2k-component"
-      label="Version 3.2.0 beta 5"
+      filename="foo_ui_columns-3.2.0-rc.1.x86-x64.fb2k-component"
+      label="Version 3.2.0 release candidate 1"
     />
     <DownloadListItem
-      filename="foo_ui_columns-3.1.5.x86-x64.fb2k-component"
-      label="Version 3.1.5 (withdrawn)"
+      filename="foo_ui_columns-3.1.4.x86-x64.fb2k-component"
+      label="Version 3.1.4"
     />
     <DownloadListItem
       filename="foo_ui_columns-3.0.1.x86-x64.fb2k-component"
