--- a/src/pages/columns-ui.astro
+++ b/src/pages/columns-ui.astro
@@ -95,8 +95,8 @@ const repo = "columns_ui"
   <h3>Latest version</h3>
   <DownloadList>
     <DownloadListItem
-      filename="foo_ui_columns-3.2.1.x86-x64.fb2k-component"
-      label="Version 3.2.1"
+      filename="foo_ui_columns-3.2.2.x86-x64.fb2k-component"
+      label="Version 3.2.2"
     />
   </DownloadList>
 
@@ -108,6 +108,10 @@ const repo = "columns_ui"
 
   <h3>Previous versions</h3>
   <DownloadList>
+    <DownloadListItem
+      filename="foo_ui_columns-3.2.1.x86-x64.fb2k-component"
+      label="Version 3.2.1"
+    />
     <DownloadListItem
       filename="foo_ui_columns-3.2.0.x86-x64.fb2k-component"
       label="Version 3.2.0"
