--- a/src/pages/columns-ui.astro
+++ b/src/pages/columns-ui.astro
@@ -92,7 +92,15 @@ const repo = "columns_ui"
 
   <h2>Downloads</h2>
 
-  <h3>Latest version</h3>
+  <h3>Latest pre-release version</h3>
+  <DownloadList>
+    <DownloadListItem
+      filename="foo_ui_columns-3.3.0-beta.1.x86-x64.fb2k-component"
+      label="Version 3.3.0 beta 1"
+    />
+  </DownloadList>
+
+  <h3>Latest stable version</h3>
   <DownloadList>
     <DownloadListItem
       filename="foo_ui_columns-3.2.3.x86-x64.fb2k-component"
