Add Columns UI 3.3.0 RC 1

--- a/src/pages/columns-ui.astro
+++ b/src/pages/columns-ui.astro
@@ -95,8 +95,8 @@ const repo = "columns_ui"
   <h3>Latest pre-release version</h3>
   <DownloadList>
     <DownloadListItem
-      filename="foo_ui_columns-3.3.0-beta.2.x86-x64.fb2k-component"
-      label="Version 3.3.0 beta 2"
+      filename="foo_ui_columns-3.3.0-rc.1.x86-x64.fb2k-component"
+      label="Version 3.3.0 release candidate 1"
     />
   </DownloadList>
 
@@ -116,6 +116,10 @@ const repo = "columns_ui"
 
   <h3>Previous versions</h3>
   <DownloadList>
+    <DownloadListItem
+      filename="foo_ui_columns-3.3.0-beta.2.x86-x64.fb2k-component"
+      label="Version 3.3.0 beta 2"
+    />
     <DownloadListItem
       filename="foo_ui_columns-3.2.2.x86-x64.fb2k-component"
       label="Version 3.2.2"
