Add Columns UI 3.3.0

--- a/src/pages/columns-ui.astro
+++ b/src/pages/columns-ui.astro
@@ -92,19 +92,11 @@ const repo = "columns_ui"
 
   <h2>Downloads</h2>
 
-  <h3>Latest pre-release version</h3>
+  <h3>Latest version</h3>
   <DownloadList>
     <DownloadListItem
-      filename="foo_ui_columns-3.3.0-rc.1.x86-x64.fb2k-component"
-      label="Version 3.3.0 release candidate 1"
-    />
-  </DownloadList>
-
-  <h3>Latest stable version</h3>
-  <DownloadList>
-    <DownloadListItem
-      filename="foo_ui_columns-3.2.3.x86-x64.fb2k-component"
-      label="Version 3.2.3"
+      filename="foo_ui_columns-3.3.0.x86-x64.fb2k-component"
+      label="Version 3.3.0"
     />
   </DownloadList>
 
@@ -117,8 +109,8 @@ const repo = "columns_ui"
   <h3>Previous versions</h3>
   <DownloadList>
     <DownloadListItem
-      filename="foo_ui_columns-3.3.0-beta.2.x86-x64.fb2k-component"
-      label="Version 3.3.0 beta 2"
+      filename="foo_ui_columns-3.2.3.x86-x64.fb2k-component"
+      label="Version 3.2.3"
     />
     <DownloadListItem
       filename="foo_ui_columns-3.2.2.x86-x64.fb2k-component"
